<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_50"
    android:padding="6dp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_add_scheme_group"
        android:textColor="@color/grey_800"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text"
        android:hint="@string/text_input_group_name"
        app:hintTextColor="@color/grey_600"
        app:hintAnimationEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSchemeGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:maxLength="8"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="6dp"
        android:gravity="top"
        android:hint="@string/text_input_description"
        android:textColorHint="@color/grey_600"
        android:textSize="16sp"
        />

    <LinearLayout
        android:id="@+id/schemeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_player_type"
            android:textColor="@color/grey_800"
            android:textSize="16sp"
            />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/bankerPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_main_player"
                android:layout_marginHorizontal="10dp"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/playerPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_player"
                android:layout_marginHorizontal="10dp"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/schemeType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/ok_add_scheme_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_btn"
            android:textSize="16sp"
            android:textColor="@color/blue_400"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/cancel_add_scheme_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_btn"
            android:textSize="16sp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>