<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    tools:context=".TextToSpeak">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_text"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_50"
            android:gravity="top|start"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/getFileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_round_rectangle_stroke_grey"
            android:text="@string/text_get_speech_to_file"
            android:textColor="@color/grey_600"
            android:textSize="16sp"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startSpeakBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/bg_round_rectangle_stroke_grey"
            android:text="@string/text_start_to_speak"
            android:textColor="@color/blue_400"
            android:gravity="center"
            android:textSize="16sp"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ttsAI"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/ic_cat"
        android:layout_margin="10dp"
        android:tint="@color/deep_orange_400"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/getSpeechText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_rectangle_stroke_grey"
        android:hint="@string/text_click_to_start_speech"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_no_speech_tip"
        android:textSize="12sp"
        android:textColor="@color/grey_600"
        android:layout_margin="8dp"
        />

</LinearLayout>