<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.GetRandomCountFragment">

    <LinearLayout
        android:id="@+id/randomScope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_random_scope"
            android:textSize="16sp"
            android:layout_marginTop="00dp"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minNumber"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="42sp"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_center_line"
                android:textSize="32sp"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/maxNumber"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="42sp"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/randomCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/randomScope"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/numberPanel"
        android:text="@string/text_zero"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/numberPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/randomCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputText"
        app:layout_constraintVertical_chainStyle="packed"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_400"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recyclerViewTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_over_list_can_move"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:visibility="invisible"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_counts"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/clickNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_zero"
                android:textSize="18sp"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/totalNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_zero"
                android:textSize="18sp"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_average"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/averageNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_zero"
                android:textSize="18sp"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_current_percent"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/thisPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_0_percent"
                android:textSize="18sp"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total_percent"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/totalPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_0_percent"
                android:textSize="18sp"
                android:gravity="start"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reset"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_rectangle_stroke_grey"
            android:layout_marginTop="6dp"
            android:text="@string/text_re_set1"
            android:gravity="center"
            android:layout_gravity="center"
            />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_input_min_count"
                android:textSize="16sp"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputMinNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:inputType="number"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_input_max_count"
                android:textSize="16sp"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputMaxNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:inputType="number"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sureBtn"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_round_rectangle_stroke_grey"
                android:layout_marginHorizontal="10dp"
                android:text="@string/text_sure_to_change"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/blue_300"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hidePanel"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_round_rectangle_stroke_grey"
                android:layout_marginHorizontal="10dp"
                android:text="@string/text_hide_panel"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/grey_600"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        >


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/changeScope"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_rectangle_stroke_grey"
            android:text="@string/text_change_scope"
            android:textColor="@color/grey_600"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:gravity="center"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startRandom"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_rectangle_stroke_grey"
            android:text="@string/text_start_random"
            android:textColor="@color/blue_400"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:gravity="center"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>